# HS1N-ToolBox

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workdlows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
h1tool/: __init__.py  __main__.py  main.py
h1tool/core/: converters.py  downloaders.py  exceptions.py  music_search.py  spotify.py
h1tool/interfaces/: cli.py  tui.py
h1tool/utils/: env_checker.py  logger.py
tests/: conftest.py  test_cli.py  test_converters.py  test_env_checker.py  test_exceptions.py  test_logger.py  test_spotify.py
